Statt $\colon$ : schreiben.
$\colon$ bedeutet \ensuremath{\text{:}}. Da kann man auch gleich den
Doppelpunkt schreiben.

git-svn-id: https://svn.lug-jena.de/uni-skripte@1836 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/linde-stochastik-zusfa/definf.tex
+++ b/linde-stochastik-zusfa/definf.tex
@@ -103,7 +103,7 @@ Auf dem Grundraum $\Omega$ wird ein System $\Algeb\subseteq \PotM(\Omega)$  von 
 ausgezeichnet, denen man in sinnvoller Weise die
 Wahrscheinlichkeit ihres Eintretens zuordnen kann. Aus naheliegenden Gr"unden fordert man,
 dass $\Algeb$ eine $\mathbf \sigma$--\textbf{Algebra} bildet, d.\,h.~$\Algeb$ erf"ullt
-folgende Eigenschaften$\colon$
+folgende Eigenschaften:
 \begin{eqnarray*}
 &(i)&\quad\emptyset\in\Algeb\;.\\
 &(ii)&\quad\mbox{Aus}\quad A\in\Algeb\quad\mbox{folgt}\quad A^c\in \Algeb\;.\\
@@ -116,7 +116,7 @@ Potenzmenge $\PotM(\Omega)$ von $\Omega$ nehmen.
 Ein \textbf{Wahrscheinlichkeitsma"s} (oder eine \textbf{Wahrscheinlichkeitsverteilung})
  $\WKM$ ist eine Abbildung von
 $\Algeb$ nach $[0,1]$, die jedem Ereignis $A\in \Algeb$ die Wahrscheinlichkeit seines
-Eintretens zuordnet und folgende Eigenschaften besitzt$\colon$
+Eintretens zuordnet und folgende Eigenschaften besitzt:
 \begin{eqnarray*}
 &(i)&\quad\mbox{Es gilt}\quad \WKM(\emptyset)=0\quad\mbox{und}\quad \WKM(\Omega)=1\;.\\
 &(ii)&\quad
@@ -181,7 +181,7 @@ F"ur eine Menge $A\subseteq \Omega$ folgt dann
 \end{equation}
 Umgekehrt, gibt man eine Folge $(p_i)_{i\ge 1}$ reeller Zahlen mit \eqref{p1} und \eqref{p2} vor,
 so wird durch (\ref{diskret}) ein Wahrscheinlichkeitsma"s $\WKM$ auf $\PotM(\Omega)$ definiert. F"ur
-endliche oder abz"ahlbar unendliche Grundr"aume $\Omega$ hat man also folgende "Aquivalenz$\colon$
+endliche oder abz"ahlbar unendliche Grundr"aume $\Omega$ hat man also folgende "Aquivalenz:
 $$
 \{\WKM\,:\,\WKM\;\mbox{Wahrscheinlichkeitsma"s auf}\;\PotM(\Omega)\}
 \Longleftrightarrow\{(p_i)_{i\ge 1}\,:\, (p_i)_{i\ge 1}\;\mbox{erf"ullen (\ref{p1}) und (\ref{p2})}\}
@@ -276,7 +276,7 @@ man die \textbf{Poissonverteilung} mit Parameter $\lambda$ durch
 $$
 P_\lambda(\{k\}):= \frac{\lambda^k}{k !}\,\mathrm e^{-\lambda}\quad\mbox{f"ur}\quad k\in\N_0\;.
 $$
-Die Bedeutung der Poissonverteilung ergibt sich aus folgendem Satz$\colon$
+Die Bedeutung der Poissonverteilung ergibt sich aus folgendem Satz:
 \begin{thm}
 Gegeben sei eine Zahl $\lambda>0$. F"ur $n\in\N$ setze man
 $p_n:=\lambda/n$. Dann folgt f"ur alle $k\in\N_0$
@@ -285,7 +285,7 @@ $$
 \lim_{n\to\infty} B_{n,p_n}(\{k\})= P_\lambda(\{k\})\;.
 $$
 \end{thm}
-Inhaltlich bedeutet dies$\colon$ F"uhrt man sehr viele unabh"angige Versuche durch ($n$ St"uck), bei denen jeweils
+Inhaltlich bedeutet dies: F"uhrt man sehr viele unabh"angige Versuche durch ($n$ St"uck), bei denen jeweils
 nur mit sehr kleiner
 Wahrscheinlichkeit $p$ Erfolg eintreten kann, so ist die Anzahl der insgesamt beobachteten Erfolge
 approximativ gem"a"s $P_\lambda$ verteilt, wobei $\lambda= n\cdot p$.
@@ -294,7 +294,7 @@ Bei einem einzelnen Versuch trete Erfolg wieder mit Wahrscheinlichkeit $p$ und M
 mit Wahrscheinlichkeit $1-p$ auf. Man f"uhrt nun so lange unabh"angige Versuche durch, bis
 man erstmals Erfolg beobachtet. Die Wahrscheinlichkeit, dass dies im $(k+1)$--ten Versuch mit
 $k\in\N_0$ geschieht, wird durch die \textbf{geometrische Verteilung} mit Parameter $p\in(0,1]$
-beschrieben$\colon$
+beschrieben:
 $$
 \WKM(\{k\}):= p\cdot(1-p)^k\,,\quad k\in\N_0\;.
 $$
@@ -394,7 +394,7 @@ $$
 \subsubsection{Eigenschaften der Verteilungsfunktion}
 \begin{thm}
 \label{VF}
-Die Verteilungsfunktion $F$ eines Wahrscheinlichkeitsma"ses besitzt folgende Eigenschaften$\colon$
+Die Verteilungsfunktion $F$ eines Wahrscheinlichkeitsma"ses besitzt folgende Eigenschaften:
 \begin{eqnarray*}
 &(i)&\quad\lim_{t\to -\infty} F(t)=0\quad\mbox{\rm und}\quad\lim_{t\to\infty} F(t)=1\;,\\
 &(ii)&\quad\mbox{\rm die Funktion}\; F\;\mbox{\rm ist nichtfallend und}\\
@@ -466,7 +466,7 @@ $$
 f"ur alle $A\in\Algeb$.
 \subsubsection{Formel von Bayes}
 Zur Berechnung von a posteriori Wahrscheinlichkeiten ist die Formel von
-Bayes wichtig. Sie besagt das folgende$\colon$
+Bayes wichtig. Sie besagt das folgende:
 \begin{thm}
 Unter den Voraussetzungen aus Satz~\ref{total} an $B_1,\ldots,B_n$ und $A$ folgt
 f"ur
@@ -497,7 +497,7 @@ wenn f"ur alle Teilmengen $I\subseteq\{1,\ldots,n\}$ stets
 \label{unab1}
 \WKM\Bigl(\bigcap_{i\in I} A_i\Bigr)= \prod_{i\in I}\WKM(A_i)
 \end{equation}
-gilt. Man kann dies auch wie folgt formulieren$\colon$ F"ur alle $m\ge 2$ und alle
+gilt. Man kann dies auch wie folgt formulieren: F"ur alle $m\ge 2$ und alle
 $1\le i_1<\cdots<i_m\le n$ hat man
 \begin{equation}
 \label{unab2}
@@ -700,7 +700,7 @@ Borelmengen $B_1,\ldots,B_n\in\BorelM(\R)$ stets
 \WKM(X_1\in B_1,\ldots,X_n\in B_n)=\WKM(X_1\in B_1)\cdots\WKM(X_n\in B_n)\;,
 \end{equation}
 so hei"sen $X_1,\ldots,X_n$ \textbf{unabh"angig}.\\
-\textit{Bemerkung 1:} Die Unabh"angigkeit der $X_j$ ist "aquivalent zu folgender Aussage$\colon$ F"ur
+\textit{Bemerkung 1:} Die Unabh"angigkeit der $X_j$ ist "aquivalent zu folgender Aussage: F"ur
 beliebige Borelmengen $B_j\in\BorelM(\R)$ sind die Ereignisse $\left(X_j^{-1}(B_j)\right)_{j=1}^n$
 unabh"angig. Das folgt aus der Tatsache, dass man in Gleichung (\ref{unab}) f"ur gewisse vorgegebene $B_j$ auch die
 reellen Zahlen $\R$ einsetzen kann.\\
@@ -734,7 +734,7 @@ Sei $X$ eine zuf"allige Gr"o"se und sei $f\colon\R\mapsto\R$ messbar. Dann ist $
 eine zuf"allige Gr"o"se.
 \end{thm}
 \textit{Allgemeine Aufgabe:} Man bestimme $\WKM_Y$ mit Hilfe von $\WKM_X$ und $f$.
-Folgendes Beispiel illustriere die Situation$\colon$ Sei $U$ gleichverteilt auf $[0,1]$, so ist mit
+Folgendes Beispiel illustriere die Situation: Sei $U$ gleichverteilt auf $[0,1]$, so ist mit
 $f(s):=1-s$ auch $Y:=f(U)=1-U$ gleichverteilt auf $[0,1]$.
 \subsubsection{Simulation stetiger zuf"alliger Gr"o"sen}
 Sei $X$ eine stetige zuf"allige Gr"o"se mit Verteilungsfunktion $F_X$. Wir nehmen an,
@@ -804,7 +804,7 @@ $$
 $$
 \end{enumerate}
 \end{thm}
-Im Fall stetiger zuf"alliger Gr"o"sen gilt folgender Satz$\colon$
+Im Fall stetiger zuf"alliger Gr"o"sen gilt folgender Satz:
 \begin{thm}
 Seien $X$ und $Y$ unabh"angig mit Verteilungsdichten $p$ und $q$. Dann besitzt $X+Y$
 die Verteilungsdichte $r$  mit
@@ -814,7 +814,7 @@ $$
 \end{thm}
 Man nennt $r$ die \textbf{Faltung} von $p$ und $q$ und schreibt $r=p*q$.
 \subsubsection{Addition speziell verteilter zuf"alliger Gr"o"sen}
-Im folgenden seien $X$ und $Y$ stets als unabh"angig vorausgesetzt. Dann gilt$\colon$
+Im folgenden seien $X$ und $Y$ stets als unabh"angig vorausgesetzt. Dann gilt:
 \begin{thm}~
 \begin{enumerate}
 \item[\rm (a)]
@@ -875,7 +875,7 @@ $X\sim \mathcal N(\mu,\sigma^2)$&$ \E X = \mu$\\ \hline
 \end{center}
 }
 \subsubsection{Eigenschaften des Erwartungswertes}
-Der Erwartungswert einer zuf"alligen Gr"o"se hat folgende Eigenschaften$\colon$
+Der Erwartungswert einer zuf"alligen Gr"o"se hat folgende Eigenschaften:
 \begin{thm}~
 \begin{enumerate}
 \item
@@ -941,7 +941,7 @@ Erwartungswert an. Sie ist ein Ma"s daf"ur, wie sehr die Werte von $X$ um $\E X$
 
 \subsubsection{Eigenschaften der Varianz}
 Im folgenden seien $X$ und $Y$ zuf"allige Gr"o"sen mit zweiten Momenten. Dann gelten die
-folgenden Aussagen$\colon$
+folgenden Aussagen:
 \begin{thm}~
 \begin{enumerate}
 \item
