Gedankenstriche durch Bindestriche ersetzen
Ein Gedankenstrich wird zur Gliederung von Sätzen und ein Bindestrich zur
Gliederung von Wörtern verwendet. In TeX wird der Gedankenstrich mit --
und der Bindestrich mit - erzeugt.

Innerhalb von Worten ist -- nicht richtig.

git-svn-id: https://svn.lug-jena.de/uni-skripte@1837 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/linde-stochastik-zusfa/definf.tex
+++ b/linde-stochastik-zusfa/definf.tex
@@ -98,11 +98,11 @@ Ein Ereignis $A\subseteq \Omega$ \textbf{tritt ein}, wenn das beim Versuch oder 
 beobachtete zuf"allige Ergebnis in der Menge
 $A$ liegt.
 
-\subsubsection{$\sigma$--Algebra}
+\subsubsection{$\sigma$-Algebra}
 Auf dem Grundraum $\Omega$ wird ein System $\Algeb\subseteq \PotM(\Omega)$  von Ereignissen
 ausgezeichnet, denen man in sinnvoller Weise die
 Wahrscheinlichkeit ihres Eintretens zuordnen kann. Aus naheliegenden Gr"unden fordert man,
-dass $\Algeb$ eine $\mathbf \sigma$--\textbf{Algebra} bildet, d.\,h.~$\Algeb$ erf"ullt
+dass $\Algeb$ eine $\mathbf \sigma$-\textbf{Algebra} bildet, d.\,h.~$\Algeb$ erf"ullt
 folgende Eigenschaften:
 \begin{eqnarray*}
 &(i)&\quad\emptyset\in\Algeb\;.\\
@@ -110,7 +110,7 @@ folgende Eigenschaften:
 &(iii)&\quad
 A_1,A_2,\ldots\in \Algeb \quad \mbox{impliziert}\quad \bigcup_{j=1}^\infty A_j\in\Algeb\;.
 \end{eqnarray*}
-Ist $\Omega$ h"ochstens abz"ahlbar unendlich, so kann man als $\sigma$--Algebra stets die
+Ist $\Omega$ h"ochstens abz"ahlbar unendlich, so kann man als $\sigma$-Algebra stets die
 Potenzmenge $\PotM(\Omega)$ von $\Omega$ nehmen.
 \subsubsection{Wahrscheinlichkeitsma"s}
 Ein \textbf{Wahrscheinlichkeitsma"s} (oder eine \textbf{Wahrscheinlichkeitsverteilung})
@@ -120,7 +120,7 @@ Eintretens zuordnet und folgende Eigenschaften besitzt:
 \begin{eqnarray*}
 &(i)&\quad\mbox{Es gilt}\quad \WKM(\emptyset)=0\quad\mbox{und}\quad \WKM(\Omega)=1\;.\\
 &(ii)&\quad
-\WKM\;\mbox{ist $\sigma$--additiv, d.\,h.~f"ur disjunkte}\;A_j\in\Algeb\;\mbox{folgt}\;
+\WKM\;\mbox{ist $\sigma$-additiv, d.\,h.~f"ur disjunkte}\;A_j\in\Algeb\;\mbox{folgt}\;
 \WKM\Big(\bigcup_{j=1}^\infty A_j\Big)=\sum_{j=1}^\infty\WKM(A_j)\;.
 \end{eqnarray*}
 \subsubsection{Wahrscheinlichkeitsraum}
@@ -161,7 +161,7 @@ $$
 \subsubsection{Wahrscheinlichkeitsma"se auf h"ochstens abz"ahlbar unendlichen Grundr"aumen}
 Bei einem Experiment seien h"ochstens abz"ahlbar unendlich viele Versuchsergebnisse
 m"oglich. Dann kann man entweder $\Omega=\{\omega_1,\ldots,\omega_N\}$ oder
-aber $\Omega=\{\omega_1,\omega_2,\ldots\}$ w"ahlen. Als $\sigma$--Algebra nimmt man in diesen
+aber $\Omega=\{\omega_1,\omega_2,\ldots\}$ w"ahlen. Als $\sigma$-Algebra nimmt man in diesen
 F"allen stets die Potenzmenge $\PotM(\Omega)$. Setzt man
 \begin{equation}
 \label{zu}
@@ -206,9 +206,9 @@ Eine st"uckweise stetige Funktion $p\colon\R\mapsto\R$ hei"st
 &(ii)&\quad\int_{-\infty}^\infty p(x)\,\mathrm d x=1
 \end{eqnarray*}
 gelten.
-\subsubsection{Borel--$\sigma$--Algebra}
-Mit $\BorelM(\R)$ bezeichnet man die kleinste $\sigma$--Algebra von Mengen aus $\R$, die
-die halboffenen Intervalle enth"alt. Man nennt $\BorelM(\R)$ die $\sigma$--Algebra der
+\subsubsection{Borel-$\sigma$-Algebra}
+Mit $\BorelM(\R)$ bezeichnet man die kleinste $\sigma$-Algebra von Mengen aus $\R$, die
+die halboffenen Intervalle enth"alt. Man nennt $\BorelM(\R)$ die $\sigma$-Algebra der
 \textbf{Borelmengen}. Elemente von $\BorelM(\R)$ sind z.\,B. alle offenen oder abgeschlossenen Mengen,
 deren abz"ahlbaren Vereinigungen und Durchschnitte usw.
 \subsubsection{Stetige Wahrscheinlichkeitsma"se}
@@ -233,7 +233,7 @@ $$
 \end{array}
 \right.
 $$
-die \textbf{Einpunktverteilung} in $\omega_0$ (oder das \textbf{Diracsche $\mathbf \delta$--Ma"s} in
+die \textbf{Einpunktverteilung} in $\omega_0$ (oder das \textbf{Diracsche $\mathbf \delta$-Ma"s} in
 $\omega_0$) definiert. Der Wahrscheinlichkeitsraum $(\Omega,\PotM(\Omega),\delta_{\omega_0})$
 beschreibt Vorg"ange, bei denen mit Wahrscheinlichkeit $1$ genau $\omega_0$ eintritt (deterministische
 Vorg"ange).
@@ -257,7 +257,7 @@ B_{n,p}(\{k\}):={n\choose k} p^k(1-p)^{n-k},\quad k=0,\ldots,n\;,
 $$
 ein Wahrscheinlichkeitsma"s $B_{n,p}$ auf $\PotM(\Omega)$ definiert. Man nennt $B_{n,p}$
 \textbf{Binomialverteilung} mit den Parametern $n$ und $p$. Die Zahl
-$B_{n,p}(\{k\})$ gibt die Wahrscheinlichkeit an, dass man bei $n$ unabh"angigen Versuchen genau $k$--mal
+$B_{n,p}(\{k\})$ gibt die Wahrscheinlichkeit an, dass man bei $n$ unabh"angigen Versuchen genau $k$-mal
 Erfolg hat. Dabei ist die Erfolgswahrscheinlichkeit in jedem einzelnen Versuch $p$, die f"ur
 Misserfolg $1-p$ .
 \subsubsection{Hypergeometrische Verteilung}
@@ -292,7 +292,7 @@ approximativ gem"a"s $P_\lambda$ verteilt, wobei $\lambda= n\cdot p$.
 \subsubsection{Geometrische Verteilung}
 Bei einem einzelnen Versuch trete Erfolg wieder mit Wahrscheinlichkeit $p$ und Misserfolg
 mit Wahrscheinlichkeit $1-p$ auf. Man f"uhrt nun so lange unabh"angige Versuche durch, bis
-man erstmals Erfolg beobachtet. Die Wahrscheinlichkeit, dass dies im $(k+1)$--ten Versuch mit
+man erstmals Erfolg beobachtet. Die Wahrscheinlichkeit, dass dies im $(k+1)$-ten Versuch mit
 $k\in\N_0$ geschieht, wird durch die \textbf{geometrische Verteilung} mit Parameter $p\in(0,1]$
 beschrieben:
 $$
@@ -366,7 +366,7 @@ $$
 
 \subsubsection{Gleichverteilung auf einer Menge im $\R^n$}
 Es sei $E\subseteq \R^n$ eine beschr"ankte und abgeschlossene
-Teilmenge, deren $n$--dimensionales Volumen $\mathrm{vol}_n(E)$ man
+Teilmenge, deren $n$-dimensionales Volumen $\mathrm{vol}_n(E)$ man
 berechnen kann. Man definiert die \textbf{Gleichverteilung auf $E$} durch den Ansatz
 $$
 \WKM(A)=\frac{\mathrm{vol}_n(A\cap E)}{\mathrm{vol}_n(E)}\;.
@@ -528,10 +528,10 @@ X^{-1}(B):=\{\omega\in\Omega : X(\omega)\in B\}
 $$
 definiert. Verk"urzend schreibt man auch $X^{-1}(B)=\;\{X\in B\}$.
 \subsubsection{Zuf"allige Gr"o"sen}
-Sei $\Omega$ eine Menge, die mit einer $\sigma$--Algebra $\Algeb$ versehen ist. Eine Abbildung
+Sei $\Omega$ eine Menge, die mit einer $\sigma$-Algebra $\Algeb$ versehen ist. Eine Abbildung
 $X\colon\Omega\mapsto\R$ hei"st \textbf{zuf"allige Gr"o"se} oder \textbf{reellwertige Zufallsvariable}
 oder \textbf{zuf"allige reelle Zahl}, wenn f"ur jedes $t\in\R$ die Menge $\{\omega\in\Omega: X(\omega)\le t\}$
-zur $\sigma$--Algebra $\Algeb$ geh"ort.\\
+zur $\sigma$-Algebra $\Algeb$ geh"ort.\\
 \textit{Bemerkung:} In diesem Fall gilt dann auch $X^{-1}(B)\in\Algeb$ f"ur jede Borelmenge $B\subseteq \R$.
 
 \subsubsection{Verteilungsgesetz einer zuf"alligen Gr"o"se}
@@ -591,7 +591,7 @@ $$
 \WKM_X([\alpha,\beta])=\WKM\{\omega\in \Omega : \alpha\le X(\omega)\le \beta\}
 =\frac{\mbox{L"ange von}\, ([\alpha,\beta]\cap[a,b])}{b-a}
 $$
-gilt. Oder $X$ ist $\mathcal N(\mu,\sigma^2)$--verteilt (man schreibt $X\sim \mathcal N(\mu,\sigma^2)$),
+gilt. Oder $X$ ist $\mathcal N(\mu,\sigma^2)$-verteilt (man schreibt $X\sim \mathcal N(\mu,\sigma^2)$),
 sofern
 $$
 \WKM_X([\alpha,\beta])=\WKM\{\omega\in \Omega : \alpha\le X(\omega)\le \beta\}=
@@ -617,8 +617,8 @@ Die Funktion $F_X$ besitzt die Eigenschaften aus Satz \ref{VF}.
 
 \subsection{Zuf"allige Vektoren und Unabh"angigkeit zuf"alliger Gr"o"sen}
 \subsubsection{Zuf"allige Vektoren}
-Sei $\Omega$ eine Menge mit einer $\sigma$--Algebra $\Algeb$. Eine Abbildung $\vec X \colon \Omega\mapsto\R^n$
-hei"st ($n$--dimensionaler) \textbf{zuf"alliger Vektor}, wenn seine Koordinatenabbildungen
+Sei $\Omega$ eine Menge mit einer $\sigma$-Algebra $\Algeb$. Eine Abbildung $\vec X \colon \Omega\mapsto\R^n$
+hei"st ($n$-dimensionaler) \textbf{zuf"alliger Vektor}, wenn seine Koordinatenabbildungen
 $X_j \colon\Omega\mapsto \R$ alle zuf"allige Gr"o"sen sind. Dabei sind wie "ublich die $X_j$ durch
 $$
 \vec X(\omega)=(X_1(\omega),\ldots,X_n(\omega))\;,\quad \omega\in\Omega\,,
@@ -654,7 +654,7 @@ Vektoren $\vec X=(X_1,\ldots,X_n)$ und $\vec Y=(Y_1,\ldots, Y_n)$ mit $\WKM_{X_j
 $1\le j\le n$, aber mit $\WKM_{\vec X}\not=\WKM_{\vec Y}$.
 \subsubsection{Randverteilungen diskreter Vektoren}
 \label{disk}
-Wir betrachten hier nur den Fall $n=2$. Ein zuf"alliger $2$--dimensionaler Vektor hat die Gestalt
+Wir betrachten hier nur den Fall $n=2$. Ein zuf"alliger $2$-dimensionaler Vektor hat die Gestalt
 $(X,Y)$ mit vorgegebenen zuf"alligen Gr"o"sen $X$ und $Y$. Weiterhin seien $X$ und $Y$ diskret und die
 Folgen
 $(x_i)_{i\ge 1}$ bzw.~$(y_j)_{j\ge 1}$ von reellen Zahlen bezeichnen  die m"oglichen Werte von $X$ bzw.~$Y$.
@@ -679,7 +679,7 @@ $$
 \subsubsection{Randverteilungen stetiger Vektoren}
 \label{stet}
 Zur besseren "Ubersichtlichkeit betrachten wir auch hier nur den Fall $n=2$. Der
-$2$--dimensionale Vektor $(X,Y)$ sei wie oben definiert. Diesmal nehmen wir aber an, dass
+$2$-dimensionale Vektor $(X,Y)$ sei wie oben definiert. Diesmal nehmen wir aber an, dass
 $\WKM_{(X,Y)}$ eine Dichte hat, es also eine Funktion $p \colon\R^2\mapsto\R$ gibt, so
 dass f"ur alle $\alpha<\beta$ und $\gamma<\delta$ stets
 $$
@@ -916,7 +916,7 @@ $$
 
 \subsection{Varianz und Kovarianz}
 \subsubsection{Momente}
-Sei $n\in\N$. Eine zuf"allige Gr"o"se $X$ besitzt ein \textbf{$n$--tes Moment}, wenn
+Sei $n\in\N$. Eine zuf"allige Gr"o"se $X$ besitzt ein \textbf{$n$-tes Moment}, wenn
 $\E|X|^n<\infty$ . Im diskreten Fall bedeutet dies
 $$
 \sum_{i=1}^\infty |x_i|^n\WKM(X=x_i)<\infty
@@ -927,7 +927,7 @@ $$
 $$
 Insbesondere hat $X$ ein erstes Moment, genau dann, wenn $\E X$ existiert.
 \begin{thm}
-Sei $1\le m\le n$. Hat eine zuf"allige Gr"o"se $X$ ein $n$--tes Moment, so besitzt sie auch ein $m$--tes Moment.
+Sei $1\le m\le n$. Hat eine zuf"allige Gr"o"se $X$ ein $n$-tes Moment, so besitzt sie auch ein $m$-tes Moment.
 Insbesondere hat jede zuf"allige Gr"o"se mit zweitem Moment einen Erwartungswert.
 \end{thm}
 \subsubsection{Varianz}
